# Laba2_OS

./: CMakeLists.txt  desktop.ini
Report_OS_2/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
include/: gauss.h  threads_lim.h
src/: gauss.c  main.c  threads_lim.c
